# high_level_robot_controller

./: .gitignore  AbbMotionPlanner.py  CMakeLists.txt  GripperMotionController.py  LICENSE  README  README.md  RobotDiagram.py  full_system.ipynb  package.xml  ros_interface_tests.py
abb/: ABB_irb1200.urdf
abb/meshes/: base_bottom.STL
abb_driver/: CMakeLists.txt  package.xml
abb_driver/include/abb_driver/: abb_driver.hpp
abb_driver/src/: abb_driver.cpp
abb_ros2_driver/: CMakeLists.txt  package.xml
abb_ros2_driver/src/: abb_ros2_driver.cpp
drake_ros2_interface/: CMakeLists.txt  package.xml
drake_ros2_interface/include/drake_ros2_interface/: drake_ros2_interface.hpp  visibility_control.h
drake_ros2_interface/src/: drake_ros2_interface.cpp
drake_ros2_interface/test/: main.cpp
drake_ros2_point_cloud_interface/: CMakeLists.txt  package.xml
drake_ros2_point_cloud_interface/include/drake_ros2_point_cloud_interface/: drake_ros2_point_cloud_interface.hpp
drake_ros2_point_cloud_interface/src/: drake_ros2_point_cloud_interface.cpp
drake_ros2_schunk_interface/: CMakeLists.txt  package.xml
drake_ros2_schunk_interface/include/drake_ros2_schunk_interface/: drake_ros2_schunk_interface.hpp
drake_ros2_schunk_interface/src/: drake_ros2_schunk_interface.cpp
drake_ros2_schunk_interface/test/: main.cpp
example_high_level_controller/: CMakeLists.txt  package.xml
example_high_level_controller/src/: example_high_level_controller.cpp
high_level_robot_controller_py/: AbbMotionPlanner.py  CMakeLists.txt  GripperMotionController.py  ProcessPointCloud.py  RosInterface.py  package.xml
high_level_robot_controller_py/abb/meshes/: disk_(900).STL  housing_900.STL  lower arm_900.STL  tilt_(900)_Non-foundry option.STL  tubular_(900).STL
high_level_robot_controller_py/simulation/: simulation.py
high_level_robot_controller_py/world/: world.sdf
include/: RosInterface.hpp
install/: install_dependencies.bash  requirements.txt
simulation/: CMakeLists.txt  RobotDiagram.py  package.xml  plotter.ipynb  simulation.py  visualizer.ipynb
simulation/abb/: ABB_irb1200.urdf
simulation/abb/meshes/: base_stan.STL  tilt_(900)_Foundry option.STL
simulation/include/simulation/: abb_motion_planner.hpp  oakd_s2_camera.hpp  package_path.hpp  robot_diagram.hpp  ros_message_creator.hpp  svh_motion_planner.hpp
simulation/src/: abb_motion_planner.cpp  oakd_s2_camera.cpp  package_path.cpp  robot_diagram.cpp  robot_diagram_test.cpp  ros_message_creator.cpp  simulation.cpp  simulation_test.cpp  svh_motion_planner.cpp  visualize.ipynb
simulation/world/: world_vis.ipynb
src/: AddSvhToPlant.py  GripperMotionController.py  ProcessPointCloud.py  RosInterface.py  ros_interface.py
src/abb/meshes/: swing.STL
src/simulation/: AbbMotionPlanner.py  RobotDiagram.py  simulation.py
src/svh/: Schunk_SVH_no_collision.urdf
svh/: Schunk_SVH.urdf
world/: world.sdf
